hphp/hack/test/typecheck/trait_priv_extends2.php.exp
File "trait_priv_extends2.php", line 15, characters 20-20:
This member visibility is: `private` (Typing[4113])
  File "trait_priv_extends2.php", line 5, characters 28-28:
  `public` was expected
File "trait_priv_extends2.php", line 15, characters 20-20:
The method `f` is not compatible with the overridden method (Typing[4341])
  File "trait_priv_extends2.php", line 5, characters 33-35:
  Expected `int`
  File "trait_priv_extends2.php", line 15, characters 25-30:
  But got `string`
